# fastapi_do_zero

./: .coverage  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
fastapi_do_zero/: app.py
tests/: test_app.py
