[project]
name = "fastapi-do-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "CRFjonathas",email = "jonaths.github@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14, <4.0"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
